// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatronLoans tests should load the ItemsCheckout component 1`] = `
<Overridable(Loader)
  isLoading={false}
>
  <Error
    error={null}
  >
    <Message
      color="blue"
    >
      Scan or type the barcode to checkout the physical copy for this patron.
    </Message>
  </Error>
</Overridable(Loader)>
`;

exports[`PatronLoans tests should render show a message with added loan 1`] = `
<ItemsCheckout
  checkoutItem={[MockFunction]}
  data={
    Object {
      "item_pid": Object {
        "type": "itemid",
        "value": "4",
      },
      "loan_pid": 2,
    }
  }
  error={null}
  isLoading={false}
>
  <Overridable(Loader)
    isLoading={false}
  >
    <Loader
      isLoading={false}
    >
      <Overridable
        id="Loader.layout"
        isLoading={false}
      >
        <Error
          error={null}
        >
          <Message
            color="blue"
          >
            <div
              className="ui blue message"
            >
              Scan or type the barcode to checkout the physical copy for this patron.
            </div>
          </Message>
        </Error>
      </Overridable>
    </Loader>
  </Overridable(Loader)>
</ItemsCheckout>
`;
